applied further review findings